src/app/[locale]/components/cards/index.scss
@import "../../../utilities/variables.scss";
.cards-container{
    display: flex;
    justify-content: space-between;
    width: 100%;
}

@media (max-width:744px){
    .cards-container{
        align-items: center;
        justify-content: center;
        .slider{
            width: 100%;
        }
    }
}
@media (max-width:390px){
    .cards-container{
      width: 85%;
      .slider{
        width: 100%;
    }
    }
  }

